overflow-fix

--- a/my-portfolio/style.css
+++ b/my-portfolio/style.css
@@ -45,7 +45,6 @@ body {
   font-family: 'Iceberg', cursive;
   font-size: 16px;
   color: var(--letter);
-  overflow-x: hidden;
 }
 .creamy-text {
   font-family: 'Lemon', cursive;
@@ -428,6 +427,7 @@ header div p:nth-of-type(2) span {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  overflow: hidden;
 }
 .projects-section h2 {
   text-decoration: underline;
